system-apps/oauth2-proxy/resources/reference-grant.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-ext-auth-to-oauth2-proxy
  namespace: kube-system
spec:
  from:
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: adguard-home
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: argo-rollouts
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: monitoring
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: mediaplatform
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: immich
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: kube-system
  to:
  - group: ""
    kind: Service
    name: oauth2-proxy
